--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html> 
 <html>
 <head>
-<title> Salina Nihalani </title>
+<title> Palomi Nihalani </title>
 
 <style>
 body{
@@ -87,10 +87,10 @@ img{
  <li class="purple" style="float:right"><a href="page5.html">Contact</a></li>
 </ul>
 
-<h1>Salina Nihalani</h1>
+<h1>Palomi Nihalani</h1>
 
 <h1>Welcome to my portfolio!</h1>
-<h2 class="h2"> I am a current first-year CS Major at Georgia Tech with threads in intelligece and mod-sim!</h2>
+<h2 class="h2"> I am a current senior at the North Andover High School with a passion for helping others!</h2>
 <!--<p> Feel free to browse around this website and view my various activities and accomplishments!</p> -->
 
 	<div style= "align:center;">
