--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@ body{
 	align-content: center;
 	margin: auto;
 	alignment-adjust:middle; 
-	background-color:#E5B2B2;
+	background-color:#e8f4f8;
 }
 ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #B497C5;
+    background-color: #e8f4f8;
 }
 li {
     float: left;
