--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #c1e1ec;
+    background-color: #B497C5;
 }
 li {
     float: left;
