--- a/page5.html
+++ b/page5.html
@@ -11,7 +11,7 @@ body{
 	align-content: center;
 	margin: auto;
 	alignment-adjust:middle; 
-	background-color:#ffecf2;
+	background-color:#e8f4f8;
 }
 ul {
     list-style-type: none;
