--- a/page4.html
+++ b/page4.html
@@ -105,7 +105,7 @@ img{
 	<p> I have also coded an app using JavaScript! View the source code in JS on <a href= "https://github.com/pnihalani26/Maze-Game/tree/main" target="_blank">Github</a> for a simple game in which users navigate a character around their screen in order to collect navigate a maze. </p>
     
     <div style= "align:center;">
-<img src="game1.JPG" style="width:400px;height:300px;">
+<img src="game1.jpg" style="width:400px;height:300px;">
 	</div>
 </body>
 
