--- a/page3.html
+++ b/page3.html
@@ -92,7 +92,7 @@ img{
 
 <div id="includedContent"></div>
     
-    <img class= "center" src="ResumeCollege.jpg" alt="Resume Part 1" style="width:900px;height:1100px;"> 
+    <img class= "center" src="Palomi Resume.docx" alt="Resume Part 1" style="width:900px;height:1100px;"> 
     <!-- <img class= "center" src="ResumePRT2.jpg" alt="Resume Part 2" style="width:900px;height:1100px;"> 
     <img class= "center" src="ResumePRT3.jpg" alt="Resume Part 3" style="width:900px;height:1100px;"> -->
    
